# Claims-Denial-FAQ-Chatbot-with-RAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: denial_scenarios.json
docs/: PROJECT_DOCUMENTATION.md
scripts/: ingest_knowledge_base.py  seed_denial_scenarios.py  snowflake_schema.sql
src/claims_denial_chatbot/: __init__.py  main.py
src/claims_denial_chatbot/api/: __init__.py  main.py  routes.py
src/claims_denial_chatbot/bot/: __init__.py  slack_bot.py
src/claims_denial_chatbot/config/: __init__.py  settings.py
src/claims_denial_chatbot/core/: __init__.py  constants.py  exceptions.py  logging.py
src/claims_denial_chatbot/data/: __init__.py  snowflake_connector.py
src/claims_denial_chatbot/embeddings/: __init__.py  embedding_service.py
src/claims_denial_chatbot/llm/: __init__.py  claude_client.py  prompt_templates.py
src/claims_denial_chatbot/models/: __init__.py  schemas.py
src/claims_denial_chatbot/rag/: __init__.py  chain.py  document_processor.py  retriever.py
src/claims_denial_chatbot/services/: __init__.py  chatbot_service.py
src/claims_denial_chatbot/vector_store/: __init__.py  pinecone_store.py
tests/: __init__.py  test_api.py  test_rag_chain.py  test_retriever.py
